# ohte

./: .gitignore  README.md  pyproject.toml
documentation/: architecture.md  changelog.md  credits.md  requirements_specification.md  software_testing.md  user_manual.md  working_hours_record.md
flaggame/: .coveragerc  .pylintrc  pyproject.toml  pytest.ini  tasks.py
flaggame/src/: circularimport.py  correctFlags.txt  csvhandler.py  flaghandler.py  game_handler.py  gamehandler.py  gamemode_classic.py  gamerules.txt  gui.py  history.py  main.py  rounds.csv  rules.py  stats.csv  statscalc.py  timerlogic.py
flaggame/src/gui_elements/: gui_about_menu.py  gui_debug_menu.py  gui_file_menu.py  gui_game.py  gui_history.py  gui_rules.py  gui_stats.py  gui_stats_menu.py
flaggame/src/logs/backup/: updategit.txt
flaggame/src/stats/: game_calc.py  stats_calc.py
flaggame/src/tests/: a_gamehandler_test.py  b_flaghandler_test.py  c_timerlogic_test.py  csvhandler_test.py  d_history_test.py  e_csvhandler_test.py  f_rules_test.py  flaghandler_test.py  gamehandler_test.py  gui_test.py  history_test.py  main_test.py  rules_test.py  softwarelaunch_test.py  timerlogic_test.py
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/: kassapaate.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: hsl.md  machine.md  monopoli.md  monopoly.md
