[tool.poetry]
name = "ohte"
version = "0.1.0"
description = ""
authors = ["joonarafael <joona.kettunen21@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
invoke = "^2.0.0"
pillow = "^9.5.0"
2to3 = "^1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
coverage = "^7.2.2"
pylint = "^2.17.2"
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
