[tool.poetry]
name = "viikko2"
version = "0.1.0"
description = ""
authors = ["joonarafael <joona.kettunen21@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
coverage = "^7.2.2"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
